<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/mainColorLight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@id/login_title"
            android:src="@drawable/login_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="30dp">
        </ImageView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_logo"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/login_title"
            android:background="@drawable/btn"
            android:layout_below="@id/login_pw"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="50dp">
        </Button>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/login_reset_pw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:text="@string/reset_password">
            </Button>

            <Button
                android:id="@+id/login_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:text="@string/signup">
            </Button>
        </LinearLayout>

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"/>

    </RelativeLayout>


</ScrollView>