<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help"
    android:id="@+id/help">

    <TextView
        android:id="@+id/help_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/mainColorLight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <ImageView
        android:id="@+id/help_logo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_below="@id/help_title"
        android:src="@drawable/contact_us"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="30dp"/>

    <TextView
        android:id="@+id/txt_help_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_logo"
        android:text="@string/help_guide"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/mainColorLight"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/txt_help_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_detail"
        android:textSize="15sp"
        android:textColor="@color/mainColorLight"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

</RelativeLayout>